--- a/mall-tiny-01/pom.xml
+++ b/mall-tiny-01/pom.xml
@@ -7,19 +7,16 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>mall-tiny-01</name>
     <description>Demo project for Spring Boot</description>
-
     <properties>
         <java.version>1.8</java.version>
     </properties>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <dependencies>
-        <!--SpringBoot通用依赖模块-->
+    <dependencies><!--SpringBoot通用依赖模块-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -36,33 +33,28 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <!--MyBatis分页插件-->
+        </dependency><!--MyBatis分页插件-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.10</version>
-        </dependency>
-        <!--集成druid连接池-->
+        </dependency><!--集成druid连接池-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.10</version>
-        </dependency>
-        <!-- MyBatis 生成器 -->
+        </dependency><!-- MyBatis 生成器 -->
         <dependency>
             <groupId>org.mybatis.generator</groupId>
             <artifactId>mybatis-generator-core</artifactId>
             <version>1.3.3</version>
-        </dependency>
-        <!--Mysql数据库驱动-->
+        </dependency><!--Mysql数据库驱动-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.15</version>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -71,5 +63,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
