--- a/mall-tiny/src/main/resources/application.yml
+++ b/mall-tiny/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
     elasticsearch:
       repositories:
         enabled: true
-      cluster-nodes: 127.0.0.1:9300 # es的连接地址及端口号
+      cluster-nodes: 127.0.0.1:9300 # es的连接地址及端口号27017
       cluster-name: elasticsearch # es集群的名称
     mongodb:
       host: localhost # mongodb的连接地址
